# django-ai-shopping-lists

./: .gitignore  Dockerfile  README.md  compose.debug.yaml  compose.yaml  main.py  package-lock.json  package.json  pyproject.toml
accounts/templates/registration/: login.html
config/: settings.py
shopping/: forms.py  models.py  tasks.py  urls.py  views.py
shopping/migrations/: 0001_initial.py
shopping/static/css/: bootstrap.css
shopping/style/scss/: custom.scss
shopping/templates/: base.html
shopping/templates/shopping/: home.html  splash.html
shopping/templates/shopping/includes/: messages.html
shopping/templates/shopping/shopping_list/: detail.html  index.html  item_edit.html
src/accounts/: urls.py
src/accounts/templates/registration/: login.html
src/config/: settings.py  urls.py
src/shopping/: forms.py  tasks.py
src/shopping/static/css/: bootstrap.css
src/shopping/templates/: base.html
src/shopping/templates/shopping/includes/: navbar.html
src/shopping/templatetags/: shopping_tags.py
