[project]
name = "email-shopping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "django>=5.2.2",
    "django-crispy-forms>=2.4",
    "django-tasks>=0.7.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "whitenoise>=6.9.0",
]
