[project]
name = "email-shopping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "django>=5.2.2",
    "django-anymail[mailgun]>=13.0",
    "django-crispy-forms>=2.4",
    "django-tasks>=0.7.0",
    "gunicorn>=23.0.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "psycopg>=3.2.9",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests/test_*.py", "tests.py"]
pythonpath = "src"